<resources>
    <string name="app_name">koinstar Consultan</string>
    <string name="on_board_title">Consultation</string>
    <string name="on_board_caption">Now it\'s easier to express your emotions with the palm of your hand</string>
    <string name="mulai">Start</string>
    <string name="welcome_text">Welcome Back</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot Password?</string>
    <string name="no_account">Doesn\'t Have Account?</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="forgot_text_title">Forgot Password</string>
    <string name="forgot_text_message">Insert email below to change your old password</string>
    <string name="send_email">Send Email</string>
    <string name="have_account">Do you have account?</string>
    <string name="nisn">NISN</string>
    <string name="phone_number">Mobile Number</string>
    <string name="tos">Term of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agreement">By clicking sign up you are agreeing to the</string>
    <string name="greeting_text">How are you today?</string>
    <string name="search_consultant">Search Consultant</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="chat">Chat</string>
    <string name="setting">Settings</string>
    <string name="see_all">See All</string>
    <string name="consultation_text">Consultation</string>
    <string name="schedule_text">Schedule</string>
    <string name="test_text">Test</string>
    <string name="wdyn">What do you need ?</string>
    <string name="social_text">Social</string>
    <string name="career_text">Career</string>
    <string name="chat_message">Start a chat with a consultant</string>
    <string name="welcome_text_chat">Welcome to E-Konsul</string>
    <string name="search_consultant_message">Make this consultation more convinient</string>
    <string name="name_text">Name</string>
    <string name="categori_text">Categories</string>
    <string name="comment_text">Comment</string>
    <string name="rate_text">What’s Your Rate?</string>
    <string name="test_history_text">History Test</string>
    <string name="test_history_message">Download psychological test results</string>
    <string name="set_font_bold">nunito_bold.ttf</string>
    <string name="set_font_semibold">nunito_semibold.ttf</string>
    <string name="set_font_regular">nunito_regular.ttf</string>
    <string name="ex_email_text">Example@gmail.com</string>
    <string name="nisn_hint">00012xxxx</string>
    <string name="id_code_phone">+62</string>
    <string name="phone_hint">8x-xxxx-xxxx</string>
    <string name="email_or_nisn">Email or Nisn</string>
    <string name="ex_email_or_nisn">example@gmail.com or 00012xxx</string>
    <string name="feature_not_ready">Ups, Feature Not Ready Yet</string>
    <string name="error_null_email_or_nisn">Please insert email or nisn</string>
    <string name="error_null_password">Please insert your password</string>
    <string name="lottie_loading">https://lottie.host/26a74e76-6b34-423a-bc68-f6912263829c/49mLu76Nlv.json</string>
    <string name="loading_text">Please Wait ...</string>
    <string name="error_failed_login">Incorrect nisn and password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_home">Home</string>
    <string name="main_history">History</string>
    <string name="main_chat">Chat</string>
    <string name="main_setting">Setting</string>
    <string name="sub_header_main">What do you need ?</string>
    <string name="psychology_material">Psychology Material</string>
    <string name="school_origin">School Origin</string>
    <string name="save">Save</string>
    <string name="alert">Attention</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="logout">Logout</string>
    <string name="error_null_phone">Please insert your phone number</string>
    <string name="error_default">Ups, something went wrong, please try again later</string>
    <string name="error_null_email">Please insert your email</string>
    <string name="send_email_reset">We have emailed your password reset link!</string>
    <string name="no_data">No data yet</string>
    <string name="hint_chat_type">Type a message</string>
    <string name="your_score">Your Score:</string>
    <string name="interpretation">Your Interpretation:</string>
    <string name="result_message">*Test results can be reviewed in the activity menu</string>
    <string name="back_to_home">Back to home</string>
    <string name="theory">Theory</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sagittis magna et tempus tincidunt. Nullam nec massa sed risus aliquam tristique. Proin eleifend finibus ultrices. Aenean id mattis ex. Nunc suscipit ultrices urna nec aliquam. Nullam aliquet est et condimentum iaculis. Donec aliquet vitae felis id consequat. Quisque imperdiet magna ac nulla posuere accumsan.</string>
    <string name="discuss">Discuss</string>
    <string name="no_video">There\'s no video uploaded</string>
    <string name="personality">Personality</string>
    <string name="talent_interest">Talent Interest</string>
    <string name="Career">Career</string>
    <string name="select_test_category">Select Test Category</string>
    <string name="change_profile_text">Change Profile Data</string>
    <string name="change_password_text">Change Password</string>
    <string name="feedback_text">Feedback</string>
    <string name="terms_and_conditions_text">Term and Conditions</string>
    <string name="privacy_police_text">Privacy Police</string>
    <string name="change_biodata_text">Change Biodata</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profession">Profession</string>
    <string name="toast_update_image_success">Image has been updated</string>
    <string name="toast_update_profile_success">Profile has been updated</string>
    <string name="no_data_chat">No chat yet</string>
</resources>