<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingTop="@dimen/_15sdp"
    tools:context=".activity.ChangeProfileActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/change_biodata_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/email_text"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/email"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/ex_email_text"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/name_text"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/name"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="xxxxxxx"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/school_origin"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/schoolOrigin"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="xxx xxxx"
            android:inputType="textCapSentences"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/profession"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/profession"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="xxxxxxx"
            android:inputType="textCapSentences"
            android:padding="@dimen/_10sdp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/save" />
</LinearLayout>