<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingTop="@dimen/_15sdp"
    tools:context=".activity.ChangePasswordActivity">
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/change_password_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/old_password"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/passwordOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            app:libIZO_hideShowPasswordIconTint="@color/color_eye"
            style="@style/editTextStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/new_password"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/passwordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            app:libIZO_hideShowPasswordIconTint="@color/color_eye"
            style="@style/editTextStyle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/confirm_password"
            android:textColor="@color/black" />

        <com.libizo.CustomEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            app:libIZO_hideShowPasswordIconTint="@color/color_eye"
            style="@style/editTextStyle"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/save" />
</LinearLayout>